test/src/e2e_vm_tests/test_programs/should_fail/superabi_duplicate_methods5/src/main.sw
// Inheritance graph
//          MySuperAbi1   MySuperAbi2          MySuperTrait
//              \              /                  /
//                      MyAbi

contract;

trait MySuperTrait {
    fn method() -> u64;
}

abi MySuperAbi1 {
    fn method() -> u64;
}

abi MySuperAbi2 {
    fn method() -> u64;
}

abi MyAbi : MySuperAbi1 + MySuperTrait + MySuperAbi2 {
    fn method1() -> u64;
}
